--- a/IVGDb/IVGDb/IVGDb.csproj
+++ b/IVGDb/IVGDb/IVGDb.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\VideoGameController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -179,6 +180,7 @@
       <DependentUpon>IVGDb.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\UserViewModel.cs" />
+    <Compile Include="Models\VideoGameViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rating.cs">
       <DependentUpon>IVGDb.tt</DependentUpon>
@@ -198,6 +200,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\loading.gif" />
     <Content Include="Images\maglss.png" />
     <Content Include="Scripts\bootstrap-responsive.min.css" />
     <Content Include="Scripts\bootstrap.js" />
@@ -222,6 +225,9 @@
     <None Include="Properties\PublishProfiles\IVGDb.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\IVGDbScripts\CarouselScript.js" />
+    <Content Include="Scripts\IVGDbScripts\jqeasy.dropdown.js" />
+    <Content Include="Scripts\IVGDbScripts\jqeasy.dropdown.min.js" />
+    <Content Include="Scripts\IVGDbScripts\jquery.form-2.4.0.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -251,6 +257,8 @@
     <Content Include="Views\User\Register.cshtml" />
     <Content Include="Views\Shared\_SearchBar.cshtml" />
     <Content Include="Views\Shared\_NewsFeed.cshtml" />
+    <Content Include="Views\VideoGame\Index.cshtml" />
+    <Content Include="Views\VideoGame\ShowGame.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
