--- a/IVGDb/IVGDb/IVGDb.csproj
+++ b/IVGDb/IVGDb/IVGDb.csproj
@@ -202,6 +202,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Images\loading.gif" />
     <Content Include="Images\maglss.png" />
+    <Content Include="Images\sharp-old-school-tv.png" />
     <Content Include="Scripts\bootstrap-responsive.min.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
