Results page early styling

--- a/IVGDb/IVGDb/IVGDb.csproj
+++ b/IVGDb/IVGDb/IVGDb.csproj
@@ -259,6 +259,7 @@
     <Content Include="Views\Shared\_NewsFeed.cshtml" />
     <Content Include="Views\VideoGame\Index.cshtml" />
     <Content Include="Views\VideoGame\ShowGame.cshtml" />
+    <Content Include="Views\VideoGame\Results.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
