--- a/IVGDb/IVGDb/IVGDb.csproj
+++ b/IVGDb/IVGDb/IVGDb.csproj
@@ -164,6 +164,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\PasswordHash.cs" />
+    <Compile Include="Helpers\ValidationHelper.cs" />
     <Compile Include="IVGDb.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
