--- a/IVGDb/IVGDb/Web.config
+++ b/IVGDb/IVGDb/Web.config
@@ -20,15 +20,10 @@
     <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
-  <system.webServer>
-    <modules>
-      <remove name="FormsAuthentication" />
-    </modules>
-  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
