Client side registration validation

--- a/IVGDb/IVGDb/IVGDb.csproj
+++ b/IVGDb/IVGDb/IVGDb.csproj
@@ -249,6 +249,7 @@
     <Content Include="Images\maglss.png" />
     <Content Include="Images\sharp-old-school-tv.png" />
     <Content Include="Images\videogames.jpg" />
+    <Content Include="Scripts\additional-methods.min.js" />
     <Content Include="Scripts\bootstrap-responsive.min.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -273,6 +274,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\IVGDbScripts\CarouselScript.js" />
     <Content Include="Scripts\IVGDbScripts\DateTimePicker.js" />
+    <Content Include="Scripts\IVGDbScripts\ivgdbscripts.js" />
     <Content Include="Scripts\IVGDbScripts\jqeasy.dropdown.js" />
     <Content Include="Scripts\IVGDbScripts\jqeasy.dropdown.min.js" />
     <Content Include="Scripts\IVGDbScripts\jquery.form-2.4.0.min.js" />
