Fixed SetUserPicURL, added login modal window, and added roles table to database. UserRoles table not importing

--- a/IVGDb/IVGDb/IVGDb.csproj
+++ b/IVGDb/IVGDb/IVGDb.csproj
@@ -197,6 +197,9 @@
     <Compile Include="Rating.cs">
       <DependentUpon>IVGDb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Role.cs">
+      <DependentUpon>IVGDb.tt</DependentUpon>
+    </Compile>
     <Compile Include="User.cs">
       <DependentUpon>IVGDb.tt</DependentUpon>
     </Compile>
