--- a/IVGDb/IVGDb/Web.config
+++ b/IVGDb/IVGDb/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IVGDb-20141016024214.mdf;Initial Catalog=aspnet-IVGDb-20141016024214;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ivgdb_Entities" connectionString="metadata=res://*/IVGDb.csdl|res://*/IVGDb.ssdl|res://*/IVGDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bvo5sb0owp.database.windows.net;initial catalog=ivgdb_db;user id=ivgdb_admin;password=Z3lD4brd$38^;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="ivgdb_Entities" connectionString="metadata=res://*/IVGDb.csdl|res://*/IVGDb.ssdl|res://*/IVGDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bvo5sb0owp.database.windows.net;initial catalog=ivgdb_db;persist security info=True;user id=ivgdb_admin;password=Z3lD4brd$38^;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
